Remove Ktor and Update version